syntax = "proto3";

import "const.proto";

package engine;

service RoutingVariableApi {
    // POST /routing/variable
    rpc Create(RoutingVariable) returns (RoutingVariable) {}
    // GET /routing/variable?size=10&page=0
    rpc List(ListRequest) returns (ListRoutingVariable) {}
    // GET /routing/variable/:ID
    rpc Get(ItemRequest) returns (RoutingVariable) {}
    // PUT /routing/variable/:ID
    rpc Update(RoutingVariable) returns (RoutingVariable) {}
    // DELETE /routing/variable/:ID
    rpc Remove(ItemRequest) returns (RoutingVariable) {}
}

message RoutingVariable {
    int64 id = 1;
    int64 domain_id = 2;
    string key = 3;
    string value = 4;
}

message ListRoutingVariable {
    repeated RoutingVariable items = 1;
}